--- a/TransporteSerieNacionalFX/bin/visual/ConfigurationCalendar.fxml
+++ b/TransporteSerieNacionalFX/bin/visual/ConfigurationCalendar.fxml
@@ -5,6 +5,7 @@
 <?import com.jfoenix.controls.JFXListView?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXToggleButton?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Spinner?>
@@ -17,13 +18,14 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="632.0" minWidth="1148.0" prefHeight="632.0" prefWidth="1148.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ConfigurationCalendarController">
+<AnchorPane minHeight="632.0" minWidth="1148.0" prefHeight="632.0" prefWidth="1148.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" GridPane.columnSpan="2" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ConfigurationCalendarController">
     <children>
-      <GridPane layoutX="446.0" layoutY="30.0" prefHeight="599.0" prefWidth="688.0" AnchorPane.bottomAnchor="3.0" AnchorPane.leftAnchor="446.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="30.0">
+      <GridPane layoutX="21.0" layoutY="14.0" prefHeight="591.0" prefWidth="1106.0" AnchorPane.bottomAnchor="27.0" AnchorPane.leftAnchor="21.0" AnchorPane.rightAnchor="21.0" AnchorPane.topAnchor="14.0">
         <columnConstraints>
-          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="506.0" minWidth="10.0" prefWidth="312.0" />
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="244.0" minWidth="0.0" prefWidth="139.0" />
-            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="338.0" minWidth="10.0" prefWidth="254.0" />
+            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="506.0" minWidth="10.0" prefWidth="427.0" />
+          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="506.0" minWidth="10.0" prefWidth="326.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="244.0" minWidth="0.0" prefWidth="27.0" />
+            <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="338.0" minWidth="10.0" prefWidth="321.0" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints maxHeight="82.0" minHeight="10.0" prefHeight="89.66" valignment="CENTER" vgrow="SOMETIMES" />
@@ -32,27 +34,37 @@
           <RowConstraints maxHeight="251.0" minHeight="10.0" prefHeight="89.66" valignment="CENTER" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="177.0" minHeight="10.0" prefHeight="89.66" valignment="CENTER" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="177.0" minHeight="10.0" prefHeight="89.66" valignment="CENTER" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="177.0" minHeight="10.0" prefHeight="89.66" valignment="CENTER" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="89.66" valignment="CENTER" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="75.0" minHeight="10.0" prefHeight="67.0" valignment="CENTER" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="71.0" minHeight="10.0" prefHeight="71.0" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Campeón y subcampeón" textFill="#2f2484" GridPane.rowIndex="2">
+            <Label text="Campeón y subcampeón" textFill="#2f2484" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <font>
                   <Font name="Segoe UI Symbol" size="24.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="20.0" />
+               </GridPane.margin>
             </Label>
-            <Label text="Calendario a doble vuelta" textFill="#2f2484" GridPane.rowIndex="4">
+            <Label text="Calendario a doble vuelta" textFill="#2f2484" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <font>
                   <Font name="Segoe UI Symbol" size="24.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="20.0" />
+               </GridPane.margin>
             </Label>
-            <Label text="Juego Inaugural " textFill="#2f2484" GridPane.rowIndex="1">
+            <Label text="Juego Inaugural " textFill="#2f2484" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <font>
                   <Font name="Segoe UI Symbol" size="24.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="20.0" />
+               </GridPane.margin>
             </Label>
-            <JFXToggleButton fx:id="secondRoundButton" contentDisplay="RIGHT" onAction="#setSecondRound" prefHeight="76.0" prefWidth="135.0" size="12.0" text="Sí" textFill="#2f2484" toggleColor="WHITE" toggleLineColor="#2f2484" GridPane.columnIndex="2" GridPane.rowIndex="4">
+            <JFXToggleButton fx:id="secondRoundButton" contentDisplay="RIGHT" onAction="#setSecondRound" prefHeight="76.0" prefWidth="135.0" size="12.0" text="Sí" textFill="#2f2484" toggleColor="WHITE" toggleLineColor="#2f2484" GridPane.columnIndex="3" GridPane.rowIndex="4">
                <font>
                   <Font name="Segoe UI Symbol" size="22.0" />
                </font>
@@ -67,7 +79,7 @@
                   </Tooltip>
                </tooltip>
             </JFXToggleButton>
-            <JFXToggleButton fx:id="inauguralGame" contentDisplay="RIGHT" onAction="#setInauguralGame" prefHeight="76.0" prefWidth="135.0" size="12.0" text="No" textFill="#2f2484" toggleColor="WHITE" toggleLineColor="#2f2484" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <JFXToggleButton fx:id="inauguralGame" contentDisplay="RIGHT" onAction="#setInauguralGame" prefHeight="76.0" prefWidth="135.0" size="12.0" text="No" textFill="#2f2484" toggleColor="WHITE" toggleLineColor="#2f2484" GridPane.columnIndex="3" GridPane.rowIndex="1">
                <font>
                   <Font size="22.0" />
                </font>
@@ -82,13 +94,16 @@
                   <Cursor fx:constant="HAND" />
                </cursor>
             </JFXToggleButton>
-            <JFXComboBox fx:id="comboChamp" labelFloat="true" onAction="#selectTeamChamp" prefHeight="53.0" prefWidth="277.0" promptText="Campeón" GridPane.rowIndex="3" />
-            <JFXComboBox fx:id="comboSub" focusColor="#2f2484" labelFloat="true" onAction="#selectTeamSubChamp" prefHeight="53.0" prefWidth="254.0" promptText="Subcampeón" GridPane.columnIndex="2" GridPane.rowIndex="3">
+            <JFXComboBox fx:id="comboChamp" labelFloat="true" onAction="#selectTeamChamp" prefHeight="53.0" prefWidth="277.0" promptText="Campeón" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets left="20.0" />
+               </GridPane.margin></JFXComboBox>
+            <JFXComboBox fx:id="comboSub" focusColor="#2f2484" labelFloat="true" onAction="#selectTeamSubChamp" prefHeight="53.0" prefWidth="254.0" promptText="Subcampeón" GridPane.columnIndex="3" GridPane.rowIndex="3">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </JFXComboBox>
-            <JFXButton fx:id="btnSwap" buttonType="RAISED" onAction="#swapTeams" prefHeight="26.0" prefWidth="64.0" text="" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <JFXButton fx:id="btnSwap" buttonType="RAISED" onAction="#swapTeams" prefHeight="26.0" prefWidth="64.0" text="" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <graphic>
                   <ImageView fitHeight="31.0" fitWidth="43.0" pickOnBounds="true" preserveRatio="true" rotate="90.0">
                      <image>
@@ -110,25 +125,31 @@
                   </Tooltip>
                </tooltip>
             </JFXButton>
-            <Label prefHeight="35.0" prefWidth="304.0" text="Juegos seguidos de local" textFill="#2f2484" GridPane.rowIndex="6">
+            <Label prefHeight="35.0" prefWidth="304.0" text="Juegos seguidos de local" textFill="#2f2484" GridPane.columnIndex="1" GridPane.rowIndex="7">
                <font>
                   <Font name="Segoe UI Symbol" size="24.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="20.0" />
+               </GridPane.margin>
             </Label>
-            <Label prefHeight="35.0" prefWidth="304.0" text="Juegos seguidos de visitante" textFill="#2f2484" GridPane.rowIndex="7">
+            <Label prefHeight="35.0" prefWidth="333.0" text="Juegos seguidos de visitante" textFill="#2f2484" GridPane.columnIndex="1" GridPane.rowIndex="8">
                <font>
                   <Font name="Segoe UI Symbol" size="24.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="20.0" />
+               </GridPane.margin>
             </Label>
-            <Spinner fx:id="maxHomeGamesSpinner" prefHeight="48.0" prefWidth="249.0" stylesheets="@../styles/PrincipalMenu.css" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="6">
+            <Spinner fx:id="maxHomeGamesSpinner" prefHeight="48.0" prefWidth="249.0" stylesheets="@../styles/PrincipalMenu.css" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="7">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Spinner>
-            <Spinner fx:id="maxVisitorGamesSpinner" prefHeight="48.0" prefWidth="248.0" stylesheets="@../styles/PrincipalMenu.css" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="7">
+            <Spinner fx:id="maxVisitorGamesSpinner" prefHeight="48.0" prefWidth="248.0" stylesheets="@../styles/PrincipalMenu.css" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="8">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor></Spinner>
-            <JFXToggleButton fx:id="champVsSub" contentDisplay="RIGHT" onAction="#setChampVsSub" prefHeight="76.0" prefWidth="135.0" size="12.0" text="Sí" textFill="#2f2484" toggleColor="WHITE" toggleLineColor="#2f2484" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <JFXToggleButton fx:id="champVsSub" contentDisplay="RIGHT" onAction="#setChampVsSub" prefHeight="76.0" prefWidth="135.0" size="12.0" text="Sí" textFill="#2f2484" toggleColor="WHITE" toggleLineColor="#2f2484" GridPane.columnIndex="3" GridPane.rowIndex="2">
                <font>
                   <Font name="Segoe UI Symbol" size="22.0" />
                </font>
@@ -143,7 +164,7 @@
                   </Tooltip>
                </tooltip>
             </JFXToggleButton>
-              <JFXButton fx:id="select" onAction="#selectTeams" prefHeight="51.0" prefWidth="135.0" stylesheets="@../styles/PrincipalMenu.css" text="Avanzar" textFill="#fcf8f8" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER">
+              <JFXButton fx:id="select" onAction="#selectTeams" prefHeight="51.0" prefWidth="135.0" stylesheets="@../styles/PrincipalMenu.css" text="Avanzar" textFill="#fcf8f8" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="9" GridPane.valignment="CENTER">
                   <font>
                       <Font name="Segoe UI Symbol" size="20.0" />
                   </font>
@@ -151,12 +172,15 @@
                       <Cursor fx:constant="HAND" />
                   </cursor>
               </JFXButton>
-            <Label fx:id="lblSymmetricSecondRound" text="Doble vuelta simétrica" textFill="#2f2484" GridPane.rowIndex="5">
+            <Label fx:id="lblSymmetricSecondRound" text="Doble vuelta simétrica" textFill="#2f2484" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <font>
                   <Font name="Segoe UI Symbol" size="24.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="20.0" />
+               </GridPane.margin>
             </Label>
-            <JFXToggleButton fx:id="symmetricSecondRound" contentDisplay="RIGHT" onAction="#setSymmetricSecondRound" prefHeight="76.0" prefWidth="135.0" size="12.0" text="No" textFill="#2f2484" toggleColor="WHITE" toggleLineColor="#2f2484" GridPane.columnIndex="2" GridPane.rowIndex="5">
+            <JFXToggleButton fx:id="symmetricSecondRound" contentDisplay="RIGHT" onAction="#setSymmetricSecondRound" prefHeight="76.0" prefWidth="135.0" size="12.0" text="No" textFill="#2f2484" toggleColor="WHITE" toggleLineColor="#2f2484" GridPane.columnIndex="3" GridPane.rowIndex="5">
                <font>
                   <Font name="Segoe UI Symbol" size="22.0" />
                </font>
@@ -171,31 +195,25 @@
                   </Tooltip>
                </tooltip>
             </JFXToggleButton>
-            <Label text="Identificador del Calendario" textFill="#2f2484">
+            <Label text="Identificador del Calendario" textFill="#2f2484" GridPane.columnIndex="1">
                <font>
                   <Font name="Segoe UI Symbol" size="24.0" />
                </font>
+               <GridPane.margin>
+                  <Insets left="20.0" />
+               </GridPane.margin>
             </Label>
-            <JFXTextField fx:id="calendarId" focusColor="#2f2484" labelFloat="true" promptText="Identificador del Calendario" stylesheets="@../styles/PrincipalMenu.css" GridPane.columnIndex="2">
+            <JFXTextField fx:id="calendarId" focusColor="#2f2484" labelFloat="true" promptText="Identificador del Calendario" stylesheets="@../styles/PrincipalMenu.css" GridPane.columnIndex="3">
                <font>
                   <Font name="Segoe UI Symbol" size="20.0" />
                </font>
                <cursor>
                   <Cursor fx:constant="TEXT" />
                </cursor>
+               <GridPane.margin>
+                  <Insets left="30.0" right="30.0" />
+               </GridPane.margin>
             </JFXTextField>
-         </children>
-      </GridPane>
-      <GridPane layoutX="11.0" layoutY="10.0" prefHeight="621.0" prefWidth="410.0" AnchorPane.bottomAnchor="1.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="727.0" AnchorPane.topAnchor="10.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="201.0" minHeight="0.0" prefHeight="107.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="507.0" minHeight="10.0" prefHeight="447.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="146.0" minHeight="10.0" prefHeight="53.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
             <JFXToggleButton fx:id="selectAll" contentDisplay="RIGHT" onAction="#selectAllTeams" prefHeight="71.0" prefWidth="418.0" size="11.0" text="Seleccionar todos los equipos" textFill="#2f2484" toggleColor="WHITE" toggleLineColor="#2f2484">
                <font>
                   <Font size="24.0" />
@@ -208,7 +226,15 @@
                   </Tooltip>
                </tooltip>
             </JFXToggleButton>
-            <JFXButton fx:id="advanceConfigurationBtn" buttonType="RAISED" contentDisplay="CENTER" onAction="#advanceConfiguration" prefHeight="35.0" prefWidth="38.0" text=" " GridPane.rowIndex="2">
+              <JFXListView fx:id="teamsSelectionListView" prefHeight="482.0" prefWidth="409.0" showTooltip="true" stylesheets="@../styles/PrincipalMenu.css" GridPane.rowIndex="1" GridPane.rowSpan="8">
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <GridPane.margin>
+                  <Insets right="20.0" />
+               </GridPane.margin>
+            </JFXListView>
+            <JFXButton fx:id="advanceConfigurationBtn" buttonType="RAISED" contentDisplay="CENTER" onAction="#advanceConfiguration" prefHeight="35.0" prefWidth="38.0" text=" " GridPane.rowIndex="9">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -227,11 +253,29 @@
                   </Tooltip>
                </tooltip>
             </JFXButton>
-              <JFXListView fx:id="teamsSelectionListView" onMouseClicked="#mouseClickedListView" onScroll="#scrollListView" prefHeight="353.0" prefWidth="410.0" showTooltip="true" stylesheets="@../styles/PrincipalMenu.css" GridPane.rowIndex="1">
+            <Label fx:id="lblOccidenteVsOriente" prefHeight="35.0" prefWidth="328.0" text="Occidente vs Oriente" textFill="#2f2484" GridPane.columnIndex="1" GridPane.rowIndex="6">
+               <font>
+                  <Font name="Segoe UI Symbol" size="24.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="20.0" />
+               </GridPane.margin>
+            </Label>
+            <JFXToggleButton fx:id="occidenteVsOrienteToggle" contentDisplay="RIGHT" onAction="#setOccidenteVsOriente" prefHeight="76.0" prefWidth="135.0" size="12.0" text="No" textFill="#2f2484" toggleColor="WHITE" toggleLineColor="#2f2484" GridPane.columnIndex="3" GridPane.rowIndex="6">
+               <font>
+                  <Font name="Segoe UI Symbol" size="22.0" />
+               </font>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
-            </JFXListView>
+               <tooltip>
+                  <Tooltip text="Los enfrentamientos de la segunda vuelta se efectuarán en el mismo orden de la primera vuelta">
+                     <font>
+                        <Font name="Segoe UI Emoji" size="24.0" />
+                     </font>
+                  </Tooltip>
+               </tooltip>
+            </JFXToggleButton>
          </children>
       </GridPane>
     </children>
