--- a/TransporteSerieNacionalFX/bin/visual/MutationsConfiguration.fxml
+++ b/TransporteSerieNacionalFX/bin/visual/MutationsConfiguration.fxml
@@ -12,31 +12,31 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="632.0" prefWidth="1148.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MutationsConfigurationController">
+<AnchorPane prefHeight="632.0" prefWidth="1147.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MutationsConfigurationController">
     <children>
-      <Label layoutX="929.0" layoutY="15.0" text="Configuraciones" textFill="#2f2484">
+      <Label layoutX="909.0" layoutY="27.0" text="Configuraciones" textFill="#2f2484">
          <font>
             <Font name="Segoe UI Emoji" size="26.0" />
          </font>
       </Label>
-      <AnchorPane fx:id="pane" layoutX="859.0" layoutY="45.0" prefHeight="386.0" prefWidth="284.0" AnchorPane.bottomAnchor="201.0" AnchorPane.leftAnchor="859.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="45.0">
+      <AnchorPane fx:id="pane" layoutX="860.0" layoutY="67.0" prefHeight="379.0" prefWidth="283.0" AnchorPane.bottomAnchor="216.0" AnchorPane.leftAnchor="860.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="67.0">
          <children>
-            <JFXComboBox fx:id="comboDate1" labelFloat="true" layoutX="39.0" layoutY="51.0" prefHeight="31.0" prefWidth="243.0" promptText="Seleccione una fecha" AnchorPane.bottomAnchor="304.0" AnchorPane.leftAnchor="39.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="51.0">
+            <JFXComboBox fx:id="comboDate1" labelFloat="true" layoutX="21.0" layoutY="33.0" prefHeight="40.0" prefWidth="242.0" promptText="Seleccione una fecha" AnchorPane.leftAnchor="21.0" AnchorPane.rightAnchor="20.0">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </JFXComboBox>
-            <JFXComboBox fx:id="comboDate2" layoutX="39.0" layoutY="134.0" prefHeight="31.0" prefWidth="243.0" promptText="Seleccione una fecha" AnchorPane.bottomAnchor="221.0" AnchorPane.leftAnchor="39.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="134.0">
+            <JFXComboBox fx:id="comboDate2" layoutX="21.0" layoutY="113.0" prefHeight="40.0" prefWidth="242.0" promptText="Seleccione una fecha" AnchorPane.leftAnchor="21.0" AnchorPane.rightAnchor="20.0">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </JFXComboBox>
-            <JFXComboBox fx:id="comboDuel1" layoutX="39.0" layoutY="237.0" prefHeight="31.0" prefWidth="243.0" promptText="Seleccione un enfrentamiento" AnchorPane.bottomAnchor="118.0" AnchorPane.leftAnchor="39.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="237.0">
+            <JFXComboBox fx:id="comboDuel1" layoutX="21.0" layoutY="195.0" prefHeight="40.0" prefWidth="242.0" promptText="Seleccione un enfrentamiento" AnchorPane.leftAnchor="21.0" AnchorPane.rightAnchor="20.0">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
             </JFXComboBox>
-            <JFXComboBox fx:id="comboDuel2" layoutX="39.0" layoutY="316.0" prefHeight="31.0" prefWidth="243.0" promptText="Seleccione un enfrentamiento" AnchorPane.bottomAnchor="39.0" AnchorPane.leftAnchor="39.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="316.0">
+            <JFXComboBox fx:id="comboDuel2" layoutX="21.0" layoutY="286.0" prefHeight="40.0" prefWidth="242.0" promptText="Seleccione un enfrentamiento" AnchorPane.leftAnchor="21.0" AnchorPane.rightAnchor="20.0">
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
@@ -73,7 +73,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton fx:id="buttonApplyMuttations" buttonType="RAISED" layoutX="902.0" layoutY="524.0" onAction="#applyMutations" prefHeight="72.0" prefWidth="227.0" stylesheets="@../styles/PrincipalMenu.css" text="Aplicar mutaciones" AnchorPane.bottomAnchor="36.0" AnchorPane.leftAnchor="902.0" AnchorPane.rightAnchor="19.0" AnchorPane.topAnchor="524.0">
+      <JFXButton fx:id="buttonApplyMuttations" buttonType="RAISED" layoutX="891.0" layoutY="571.0" onAction="#applyMutations" prefHeight="70.0" prefWidth="226.0" stylesheets="@../styles/PrincipalMenu.css" text="Aplicar mutaciones" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="891.0" AnchorPane.rightAnchor="30.0" AnchorPane.topAnchor="571.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -81,18 +81,18 @@
             <Font name="Segoe UI Emoji" size="20.0" />
          </font>
       </JFXButton>
-      <Label layoutX="903.0" layoutY="465.0" text="Iteraciones" textFill="#2f2484" AnchorPane.bottomAnchor="142.0" AnchorPane.leftAnchor="903.0" AnchorPane.rightAnchor="144.0" AnchorPane.topAnchor="465.0">
+      <Label layoutX="888.0" layoutY="472.0" prefHeight="56.0" prefWidth="118.0" text="Iteraciones" textFill="#2f2484" AnchorPane.bottomAnchor="135.0" AnchorPane.leftAnchor="888.0" AnchorPane.rightAnchor="141.0" AnchorPane.topAnchor="472.0">
          <font>
             <Font name="Segoe UI Emoji" size="21.0" />
          </font>
       </Label>
-      <Spinner fx:id="iterations" editable="true" layoutX="1008.0" layoutY="453.0" prefHeight="48.0" prefWidth="128.0" stylesheets="@../styles/PrincipalMenu.css" AnchorPane.bottomAnchor="131.0" AnchorPane.leftAnchor="1008.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="453.0" />
-      <JFXListView fx:id="selectedMutationListView" layoutX="16.0" layoutY="360.0" prefHeight="261.0" prefWidth="842.0" stylesheets="@../styles/PrincipalMenu.css" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="16.0" AnchorPane.topAnchor="360.0">
+      <Spinner fx:id="iterations" editable="true" layoutX="993.0" layoutY="461.0" prefHeight="48.0" prefWidth="128.0" stylesheets="@../styles/PrincipalMenu.css" AnchorPane.bottomAnchor="123.0" AnchorPane.leftAnchor="993.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="461.0" />
+      <JFXListView fx:id="selectedMutationListView" layoutX="26.0" layoutY="360.0" prefHeight="281.0" prefWidth="832.0" stylesheets="@../styles/PrincipalMenu.css" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="26.0" AnchorPane.topAnchor="360.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXListView>
-        <JFXListView fx:id="mutationsListView" layoutX="17.0" layoutY="15.0" prefHeight="233.0" prefWidth="840.0" stylesheets="@../styles/PrincipalMenu.css" AnchorPane.bottomAnchor="384.0" AnchorPane.leftAnchor="17.0" AnchorPane.topAnchor="15.0">
+        <JFXListView fx:id="mutationsListView" layoutX="25.0" layoutY="27.0" prefHeight="252.0" prefWidth="832.0" stylesheets="@../styles/PrincipalMenu.css" AnchorPane.bottomAnchor="384.0" AnchorPane.leftAnchor="25.0" AnchorPane.topAnchor="27.0">
             <cursor>
                 <Cursor fx:constant="HAND" />
             </cursor>
