--- a/TransporteSerieNacionalFX/src/visual/CalendarStatistics.fxml
+++ b/TransporteSerieNacionalFX/src/visual/CalendarStatistics.fxml
@@ -11,13 +11,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="632.0" prefWidth="1148.0" stylesheets="@../styles/PrincipalMenu.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CalendarStatisticsController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="632.0" prefWidth="1148.0" stylesheets="@../styles/PrincipalMenu.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CalendarStatisticsController" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
    <children>
       <JFXTabPane layoutX="14.0" layoutY="64.0" prefHeight="503.0" prefWidth="1114.0" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="64.0">
          <tabs>
             <Tab text="Calendarios">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                      <children>
                         <BarChart fx:id="barChartCalendar" barGap="0.0" categoryGap="0.0" prefHeight="421.0" prefWidth="1114.0">
                           <xAxis>
