--- a/TransporteSerieNacionalFX/bin/styles/PrincipalMenu.css
+++ b/TransporteSerieNacionalFX/bin/styles/PrincipalMenu.css
@@ -11,6 +11,12 @@
 .jfx-button:hover{
     -fx-effect: dropshadow(two-pass-box , #011b1d, 8, 0.1 , 1, 3);
 }
+.list-cell {
+    -fx-border-color: -fx-box-border -fx-box-border transparent transparent;
+    -fx-font: 20px "Segoe UI Symbol";
+    -fx-text-fill: #2f2484;
+    -fx-alignment: CENTER;
+}
 
 .list-cell:filled:selected:focused, .list-cell:filled:selected {
     -fx-background-color: linear-gradient(#328BDB 0%, #207BCF 25%, #2163cf 75%, #1e27cf 100%);
