--- a/TransporteSerieNacionalFX/bin/visual/TeamsItinerary.fxml
+++ b/TransporteSerieNacionalFX/bin/visual/TeamsItinerary.fxml
@@ -4,6 +4,7 @@
 <?import com.jfoenix.controls.JFXListView?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -25,7 +26,14 @@
             <Font name="Segoe UI Emoji" size="27.0" />
          </font>
       </Label>
-      <TableView fx:id="itineraryTable" layoutX="566.0" layoutY="58.0" prefHeight="551.0" prefWidth="561.0" stylesheets="@../styles/PrincipalMenu.css" AnchorPane.bottomAnchor="23.0" AnchorPane.leftAnchor="566.0" AnchorPane.rightAnchor="21.0" AnchorPane.topAnchor="58.0" />
+      <TableView fx:id="itineraryTable" layoutX="566.0" layoutY="58.0" prefHeight="551.0" prefWidth="561.0" stylesheets="@../styles/PrincipalMenu.css" AnchorPane.bottomAnchor="23.0" AnchorPane.leftAnchor="566.0" AnchorPane.rightAnchor="21.0" AnchorPane.topAnchor="58.0">
+         <columns>
+            <TableColumn fx:id="colDates" prefWidth="92.0" text="Fecha" />
+            <TableColumn prefWidth="115.0" text="Equipo" />
+            <TableColumn prefWidth="115.0" text="Equipo" />
+            <TableColumn prefWidth="115.0" text="Equipo" />
+            <TableColumn prefWidth="115.0" text="Equipo" />
+         </columns></TableView>
       <JFXButton fx:id="showItinerary" buttonType="RAISED" layoutX="405.0" layoutY="301.0" onAction="#displayItinerary" prefHeight="58.0" prefWidth="139.0" text="Ver Itinerario" AnchorPane.bottomAnchor="273.0" AnchorPane.leftAnchor="405.0" AnchorPane.rightAnchor="604.0" AnchorPane.topAnchor="301.0">
          <font>
             <Font name="Segoe UI Symbol" size="18.0" />
